--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,208 @@ margin: 0;
 padding: 0;
 box-sizing: border-box;
 }
+/* color */
+:root{
+     --white: #fff;
+     --small-text: #707070;
+     --border: #b3b3b3;
+     --icons: #a5a5a5;
+     --notify: #9fd8f8;
+     --highlight: #419388;
+}
+
+/* utility */
+.body {
+    font-family: 'Kanit', sans-serif;
+}
+
+.icons {
+    color: var(--icons);
+    font-size: 18px;
+}
+
+.small-text-size {
+    font-size: 12px;
+    color: var(--small-text);
+}
+
+.text-size {
+    font-size: 14px;
+}
+
+/* ------------------- */
+
+.background {
+    height: 100vh;
+    background: linear-gradient(180deg, rgba(0, 150, 136) 15%, rgba(216, 219, 214) 15%);
+}
+
+.box-container {
+    height: 80%;
+    min-height: 400px;
+    width: 90%;
+    min-width: 900px;
+    max-width: 1200px;
+    background-color: var(--white);
+    border: 1px solid var(--border);
+    box-shadow: 0 0 30px 2px rgba(111, 143, 135, 0.5);
+}
+
+/* sidebar */
+
+.sidebar {
+    height: 100%;
+    width: 35%;
+    min-width: 350px;
+    max-width: 500px;
+    border-right: 1px solid #b4b4b4;
+}
+
+.contacts-list-container {
+    height: 100%;
+}
+.avatar-image {
+    height: 50px;
+    border-radius: 50%;
+}
+
+.selected-contact {
+    background-color: #cdcfcf;
+}
+
+/* sezione attiva/disattiva notifiche */
+
+.notify-container {
+    background-color: var(--notify);
+    height: 70px;
+}
+
+.notify-icon {
+    color: var(--notify);
+    background-color: var(--white);
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+}
+
+.notify-icon-on::before {
+    content: "\f0f3";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 800;
+}
+
+.notify-icon-off::before {
+    content: "\f1f6";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 800;
+}
+
+/* input di ricerca contatti e nuovo messaggio*/
+
+.search-container {
+    border: 1px solid #e9ebec;
+}
+
+.input {
+    border: none;
+    outline: none;
+}
+
+.input.search {
+    width: calc(100% - 40px);
+    padding: 3px;
+}
+
+.input.message {
+    width: 80%;
+    padding: 10px;
+}
+
+/* main */
+
+.main {
+    width: 65%;
+}
+
+/* sezione info contatto + sezione input messaggio */
+
+.chat-control-section, .user-control-section {
+    height: 65px;
+    background-color: #e9ebec;
+}
+
+.message-input-icon {
+    font-size: 25px;
+    color: #646464;
+}
+
+/* sezione chat */
+.chat-bg {
+    height: calc(100% - 120px);
+    background: url(../img/mine.jpg) repeat 50% 50%;
+    font-weight: 500;
+}
+
+.message-container::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.sent,
+.received {
+    border-radius: 15px;
+    min-width: 200px;
+    max-width: 300px;
+    box-shadow: 0 0 15px 1px rgba(111, 143, 135, 0.4);
+}
+
+.sent {
+    background-color: #d5f9ba;
+    float: right;
+}
+
+.received {
+    background-color: #fff;
+    float: left;
+}
+
+.chat-message {
+    position: relative;
+}
+
+.mod-box {
+    position: absolute;
+    background-color: #fff;
+    top: 35px;
+    right: 10px;
+    z-index: 1000;
+}
+
+.message-option {
+    color: #707070;
+}
+
+/* hover */
+
+.contact-container:hover {
+    background-color: #e9ebeb;
+    cursor: pointer;
+}
+
+.notify-icon-on:hover,
+.notify-icon-off:hover,
+.link:hover,
+.fas:hover,
+.far:hover,
+.message-option:hover {
+    color: var(--highlight);
+    cursor: pointer;
+}
+
+/* hide scrollbar */
+
+.contacts-list-container::-webkit-scrollbar {
+    display: none;
+}
