complete milestone1 + milestone2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,7 @@ box-sizing: border-box;
 
 /* hide scrollbar */
 
+.chat-bg::-webkit-scrollbar,
 .contacts-list-container::-webkit-scrollbar {
     display: none;
 }
